--- a/web_kursachsem4.Web/appsettings.Development.json
+++ b/web_kursachsem4.Web/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "web_kursachsem4.dev": "Host=192.168.1.62;Port=5432;Username=sonik;Password=post1238;Database=tetris;"
     }
-  }
 }
