--- a/web_kursachsem4.Services/web_kursachsem4.Services.csproj
+++ b/web_kursachsem4.Services/web_kursachsem4.Services.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\web_kursachsem4.Data\web_kursachsem4.Data.csproj" />
+  </ItemGroup>
 </Project>
