HTTPS get post put delete
чекпоінт перед додаванням JWT

--- a/web_kursachsem4.Services/web_kursachsem4.Services.csproj
+++ b/web_kursachsem4.Services/web_kursachsem4.Services.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" />
     <PackageReference Include="Microsoft.Data.SqlClient" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
   </ItemGroup>
