--- a/web_kursachsem4.Web/appsettings.Development.json
+++ b/web_kursachsem4.Web/appsettings.Development.json
@@ -7,5 +7,10 @@
     },
     "ConnectionStrings": {
         "web_kursachsem4.dev": "Host=192.168.1.62;Port=5432;Username=sonik;Password=post1238;Database=tetris;"
+    },
+    "JwtSettings": {
+        "SecretKey": "8hFiadHpYF1vdPT38p7bQDD0sEJSbkiF", //секретне значення не менше 32 символів для безпеки, не повинно зберігатися тут! (HMACSHA256 key)
+        "Issuer": "web-kursachsem4-api",
+        "Audience": "web-kursachsem4-client"
     }
 }
