--- a/web_kursachsem4.Web/appsettings.Development.json
+++ b/web_kursachsem4.Web/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "web_kursachsem4.dev": "Host=192.168.1.62;Port=5432;Username=sonik;Password=post1238;Database=tetris;"
+        "web_kursachsem4.dev": "Host=localhost;Port=5432;Username=postgres;Password=1234;Database=tetris;"
     },
     "JwtSettings": {
         "SecretKey": "8hFiadHpYF1vdPT38p7bQDD0sEJSbkiF", //секретне значення не менше 32 символів для безпеки, не повинно зберігатися тут! (HMACSHA256 key)
